2007-07-22  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/bits/fcntl.h [__USE_GNU] (O_CLOEXEC): New macro.
	* hurd/port2fd.c (_hurd_port2fd): Implement O_CLOEXEC.

2007-07-22  Ulrich Drepper  <drepper@redhat.com>

	* login/utmp_file.c (setutent_file): Use O_CLOEXEC if possible.

	* libio/fileops.c (_IO_new_file_fopen): Recognize 'e' flag and set
	O_CLOEXEC is needed.
	* nis/nss_compat/compat-grp.c: Use 'e' flag when opening file.
	Avoid additional fcntl to set O_CLOEXEC if not needed.
	* nis/nss_compat/compat-initgroups.c: Likewise.
	* nis/nss_compat/compat-pwd.c: Likewise.
	* nis/nss_compat/compat-spwd.c: Likewise.

2007-07-21  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* manual/errno.texi: Change ECANCELED value to 119.

	* mach/lock-intern.h: Include <sys/cdefs.h>.

	* sysdeps/mach/hurd/sigaction.c (__sigaction): Check ACT != NULL before
	reading A.

        * sysdeps/mach/hurd/sigsuspend.c (sigsuspend_not_cancel): Define alias
        to __sigsuspend.

	* sysdeps/mach/i386/sysdep.h: Include <dl-sysdep.h> and <tls.h>.

2006-06-13  Thomas Schwinge  <tschwinge@gnu.org>

	* sysdeps/mach/hurd/tls.h: Change `ASSEMBLER' conditional to
	`__ASSEMBLER__'.
	* sysdeps/mach/hurd/i386/tls.h: Likewise.

2007-07-21  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (get_mapping): Use MSG_CMSG_CLOEXEC for
	descriptor received from nscd.

	* sysdeps/unix/sysv/linux/bits/socket.h: Define MSG_CMSG_CLOEXEC.

	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Define O_CLOEXEC.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.

2007-07-20  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4816]
	* manual/signal.texi (Non-atomic Example): Make memory var volatile.

	[BZ #4813]
	* login/forkpty.c (forkpty): Close master and slave fds on