@@ -1,5 +1,7 @@
 2007-07-22  Roland McGrath  <roland@frob.com>
 
+	* hurd/getdport.c: Add missing copyright year update.
+
 	* sysdeps/mach/hurd/bits/fcntl.h [__USE_GNU] (O_CLOEXEC): New macro.
 	* hurd/port2fd.c (_hurd_port2fd): Implement O_CLOEXEC.
 
@@ -17,15 +19,19 @@
 
 2007-07-21  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
+	[BZ #3665]
 	* manual/errno.texi: Change ECANCELED value to 119.
 
+	[BZ #4610]
 	* mach/lock-intern.h: Include <sys/cdefs.h>.
 
+	[BZ #4178]
 	* sysdeps/mach/hurd/sigaction.c (__sigaction): Check ACT != NULL before
 	reading A.
 
-        * sysdeps/mach/hurd/sigsuspend.c (sigsuspend_not_cancel): Define alias
-        to __sigsuspend.
+	[BZ #4126]
+	* sysdeps/mach/hurd/sigsuspend.c (sigsuspend_not_cancel): Define alias
+	to __sigsuspend.
 
 	* sysdeps/mach/i386/sysdep.h: Include <dl-sysdep.h> and <tls.h>.
 
